Fix css overlaping bug, minor text changes

--- a/src/css/pages/AboutMe.css
+++ b/src/css/pages/AboutMe.css
@@ -1,4 +1,4 @@
-.OuterContainer {
+.OuterContainerAboutMe {
     display: flex;
     flex-direction: column;
     align-items: center;
