--- a/src/css/pages/HomePage.css
+++ b/src/css/pages/HomePage.css
@@ -1,8 +1,8 @@
-.OuterContainer {
+.OuterContainerHomePage {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+}
 
-    height: 100%;
-    width: 100%
+.OuterContainerHomePage section {
+    flex: 1;
 }
