--- a/src/css/pages/Projects.css
+++ b/src/css/pages/Projects.css
@@ -1,4 +1,4 @@
-.OuterContainer {
+.OuterContainerProjects {
     display: flex;
     flex-direction: column;
     align-items: center;
